[package]
name = "OxParse"
version = "0.1.1"
edition = "2018"

license = "MIT"
description = "Parser combinator crate"
repository = "https://github.com/0xffset/parser-combinator"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"