[package]
name = "ox_parser"
version = "0.3.4"
edition = "2018"

license = "MIT"
description = "Parser combinator crate. Provides a simple parser combinator library for Rust."
repository = "https://github.com/0xffset/parser-combinator"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"